--- a/TopCard/src/swt/swl/topcard/view/EditRequirementCardView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/EditRequirementCardView.fxml
@@ -74,7 +74,7 @@
 				<HBox alignment="BOTTOM_RIGHT" layoutX="301.0" layoutY="737.0" prefHeight="73.0" prefWidth="425.0" spacing="50.0">
 					<children>
 						<Button fx:id="closeButton" mnemonicParsing="false" onAction="#closeWindow" prefHeight="70.0" prefWidth="200.0" text="Close without saving" />
-						<Button fx:id="editButton" mnemonicParsing="false" onAction="#editButtonClicked" prefHeight="70.0" prefWidth="200.0" text="Save Changes" />
+						<Button fx:id="editButton" mnemonicParsing="false" onAction="#editButtonClicked" prefHeight="70.0" prefWidth="200.0" text="Update" />
 					</children>
 				</HBox>
 				<HBox layoutX="439.0" layoutY="58.0" prefHeight="28.0" prefWidth="313.0">
