--- a/TopCard/src/swt/swl/topcard/view/SearchRequirementCardView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/SearchRequirementCardView.fxml
@@ -71,11 +71,11 @@
                         <TextArea fx:id="rationaleTextArea" prefHeight="140.0" prefWidth="400.0" />
                         <VBox prefHeight="188.0" prefWidth="341.0" spacing="6.0">
                            <children>
-                              <HBox fx:id="descriptionPreciseHBox1" prefHeight="26.0" prefWidth="309.0" spacing="10.0">
+                              <HBox fx:id="descriptionPreciseHBox" prefHeight="26.0" prefWidth="309.0" spacing="10.0">
                                  <children>
                                     <Label prefHeight="26.0" prefWidth="187.0" text="Precise Vote Score:" />
-                                    <ComboBox fx:id="rationalePreciseCompareComboBox1" prefHeight="26.0" prefWidth="52.0" />
-                                    <ComboBox fx:id="rationalePreciseNumberComboBox1" layoutX="119.0" layoutY="10.0" prefHeight="26.0" prefWidth="64.0" />
+                                    <ComboBox fx:id="rationalePreciseCompareComboBox" prefHeight="26.0" prefWidth="52.0" />
+                                    <ComboBox fx:id="rationalePreciseNumberComboBox" layoutX="119.0" layoutY="10.0" prefHeight="26.0" prefWidth="64.0" />
                                  </children>
                               </HBox>
                               <HBox fx:id="rationaleUnderstandableHBox" prefHeight="26.0" prefWidth="309.0" spacing="10.0">
