--- a/TopCard/src/swt/swl/topcard/view/EditRequirementCardView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/EditRequirementCardView.fxml
@@ -77,83 +77,83 @@
 						<Button fx:id="editButton" mnemonicParsing="false" onAction="#editButtonClicked" prefHeight="70.0" prefWidth="200.0" text="Update" />
 					</children>
 				</HBox>
-				<HBox layoutX="439.0" layoutY="58.0" prefHeight="28.0" prefWidth="313.0">
+				<HBox layoutX="433.0" layoutY="58.0" prefHeight="28.0" prefWidth="319.0">
 					<children>
                   <Label layoutX="10.0" layoutY="10.0" prefHeight="27.0" prefWidth="56.0" text="RQID:" />
       				<Label fx:id="requirementCardNumberLabel" prefHeight="27.0" prefWidth="46.0" />
-						<Label prefHeight="27.0" prefWidth="106.0" text="MajorVersion:" />
+						<Label prefHeight="27.0" prefWidth="121.0" text=", MajorVersion:" />
 						<Label fx:id="majorVersionLabel" prefHeight="27.0" prefWidth="44.0" />
 						<Label prefHeight="27.0" prefWidth="118.0" text=", MinorVersion:" />
 						<Label fx:id="minorVersionLabel" prefHeight="27.0" prefWidth="41.0" />
 					</children>
 				</HBox>
-				<Pane fx:id="showVoteResultsPane" layoutX="452.0" layoutY="129.0" prefHeight="517.0" prefWidth="219.0">
+				<Pane fx:id="showVoteResultsPane" layoutX="452.0" layoutY="129.0" prefHeight="517.0" prefWidth="252.0">
 					<children>
-						<Label layoutY="29.0" prefHeight="27.0" prefWidth="98.0" text="Vote Results : " textFill="#4e0ad8" underline="true" />
-						<VBox layoutX="4.0" layoutY="81.0" prefHeight="94.0" prefWidth="214.0">
+						<Label fx:id="voteResultsAmountLabel" layoutY="29.0" prefHeight="27.0" prefWidth="246.0" text="Vote Results : " textFill="#4e0ad8" underline="true" />
+						<VBox layoutX="4.0" layoutY="81.0" prefHeight="94.0" prefWidth="250.0">
 							<children>
-								<HBox prefHeight="18.0" prefWidth="261.0" spacing="10.0">
+								<HBox prefHeight="18.0" prefWidth="229.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Precise:" />
-										<Label fx:id="descriptionPreciseVoteResultLabel" prefHeight="18.0" prefWidth="73.0" text="voteResult" />
+										<Label fx:id="descriptionPreciseVoteResultLabel" prefHeight="18.0" prefWidth="141.0" text="no votes submitted" />
 									</children>
 								</HBox>
 								<HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Understandable:" />
-										<Label fx:id="descriptionUnderstandableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="71.0" text="voteResult" />
+										<Label fx:id="descriptionUnderstandableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="141.0" text="no votes submitted" />
 									</children>
 								</HBox>
 								<HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Correct:" />
-										<Label fx:id="descriptionCorrectVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="73.0" text="voteResult" />
+										<Label fx:id="descriptionCorrectVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="141.0" text="no votes submitted" />
 									</children>
 								</HBox>
 								<HBox layoutX="10.0" layoutY="28.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Complete:" />
-										<Label fx:id="descriptionCompleteVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="71.0" text="voteResult" />
+										<Label fx:id="descriptionCompleteVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="141.0" text="no votes submitted" />
 									</children>
 								</HBox>
 								<HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Atomic:" />
-										<Label fx:id="descriptionAtomicVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="70.0" text="voteResult" />
+										<Label fx:id="descriptionAtomicVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="143.0" text="no votes submitted" />
 									</children>
 								</HBox>
 							</children>
 						</VBox>
-						<VBox layoutX="4.0" layoutY="241.0" prefHeight="94.0" prefWidth="214.0">
+						<VBox layoutX="4.0" layoutY="241.0" prefHeight="94.0" prefWidth="249.0">
 							<children>
 								<HBox prefHeight="18.0" prefWidth="261.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Precise:" />
-										<Label fx:id="rationalePreciseVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="74.0" text="voteResult" />
+										<Label fx:id="rationalePreciseVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="142.0" text="no votes submitted" />
 									</children>
 								</HBox>
 								<HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Understandable:" />
-										<Label fx:id="rationaleUnderstandableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="71.0" text="voteResult" />
+										<Label fx:id="rationaleUnderstandableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="144.0" text="no votes submitted" />
 									</children>
 								</HBox>
 								<HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Traceable:" />
-										<Label fx:id="rationaleTraceableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="72.0" text="voteResult" />
+										<Label fx:id="rationaleTraceableVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="142.0" text="no votes submitted" />
 									</children>
 								</HBox>
 								<HBox layoutX="10.0" layoutY="28.0" prefHeight="18.0" prefWidth="261.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Complete:" />
-										<Label fx:id="rationaleCompleteVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="74.0" text="voteResult" />
+										<Label fx:id="rationaleCompleteVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="142.0" text="no votes submitted" />
 									</children>
 								</HBox>
 								<HBox layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="215.0" spacing="10.0">
 									<children>
 										<Label prefHeight="16.0" prefWidth="130.0" text="Consistent: " />
-										<Label fx:id="rationaleConsistentVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="73.0" text="voteResult" />
+										<Label fx:id="rationaleConsistentVoteResultLabel" layoutX="10.0" layoutY="10.0" prefHeight="18.0" prefWidth="143.0" text="no votes submitted" />
 									</children>
 								</HBox>
 							</children>
