--- a/TopCard/bin/swt/swl/topcard/view/RegistrationView.fxml
+++ b/TopCard/bin/swt/swl/topcard/view/RegistrationView.fxml
@@ -4,32 +4,40 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="278.0" prefWidth="531.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.controller.RegistrationController">
-   <children>
-      <VBox layoutX="47.0" layoutY="57.0" prefHeight="175.0" prefWidth="410.0">
-         <children>
-            <HBox prefHeight="60.0" prefWidth="373.0" spacing="47.0">
-               <children>
-                  <Label prefHeight="16.0" prefWidth="77.0" text="First name:" />
-                  <TextField fx:id="firstNameTextField" />
-               </children>
-            </HBox>
-            <HBox prefHeight="49.0" prefWidth="366.0" spacing="50.0">
-               <children>
-                  <Label text="Last name:" />
-                  <TextField fx:id="lastNameTextField" />
-               </children>
-            </HBox>
-            <HBox prefHeight="39.0" prefWidth="358.0" spacing="38.0">
-               <children>
-                  <Label prefHeight="27.0" prefWidth="86.0" text="Login name:" />
-                  <TextField fx:id="loginNameTextField" />
-               </children>
-            </HBox>
-         </children>
-      </VBox>
-      <Button fx:id="applyButton" layoutX="393.0" layoutY="227.0" mnemonicParsing="false" onAction="#register" prefHeight="39.0" prefWidth="121.0" text="Apply" />
-      <Label layoutX="7.0" layoutY="14.0" prefHeight="27.0" prefWidth="315.0" text="Registration:     Please enter your data." />
-      <Button fx:id="cancelButton" layoutX="232.0" layoutY="227.0" mnemonicParsing="false" onAction="#cancelButtonClicked" prefHeight="39.0" prefWidth="121.0" text="Cancel" />
-   </children>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+	minWidth="-Infinity" prefHeight="278.0" prefWidth="531.0"
+	xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="swt.swl.topcard.controller.impl.RegistrationControllerImpl">
+	<children>
+		<VBox layoutX="47.0" layoutY="57.0" prefHeight="175.0" prefWidth="410.0">
+			<children>
+				<HBox prefHeight="60.0" prefWidth="373.0" spacing="47.0">
+					<children>
+						<Label prefHeight="16.0" prefWidth="77.0" text="First name:" />
+						<TextField fx:id="firstNameTextField" />
+					</children>
+				</HBox>
+				<HBox prefHeight="49.0" prefWidth="366.0" spacing="50.0">
+					<children>
+						<Label text="Last name:" />
+						<TextField fx:id="lastNameTextField" />
+					</children>
+				</HBox>
+				<HBox prefHeight="39.0" prefWidth="358.0" spacing="38.0">
+					<children>
+						<Label prefHeight="27.0" prefWidth="86.0" text="Login name:" />
+						<TextField fx:id="loginNameTextField" />
+					</children>
+				</HBox>
+			</children>
+		</VBox>
+		<Button fx:id="applyButton" layoutX="393.0" layoutY="227.0"
+			mnemonicParsing="false" onAction="#register" prefHeight="39.0"
+			prefWidth="121.0" text="Apply" />
+		<Label layoutX="7.0" layoutY="14.0" prefHeight="27.0" prefWidth="315.0"
+			text="Registration:     Please enter your data." />
+		<Button fx:id="cancelButton" layoutX="232.0" layoutY="227.0"
+			mnemonicParsing="false" onAction="#cancelButtonClicked" prefHeight="39.0"
+			prefWidth="121.0" text="Cancel" />
+	</children>
 </Pane>
