--- a/TopCard/src/swt/swl/topcard/view/CreateModuleView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/CreateModuleView.fxml
@@ -10,7 +10,7 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
 	minWidth="-Infinity" prefHeight="130.0" prefWidth="531.0"
 	xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="swt.swl.topcard.controller.CreateModuleController">
+	fx:controller="swt.swl.topcard.controller.impl.CreateModuleControllerImpl">
 	<children>
 		<Label fx:id="headerLabel" layoutX="14.0" layoutY="14.0"
 			text="Create new module">
