--- a/TopCard/src/swt/swl/topcard/view/CreateUserStoryView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/CreateUserStoryView.fxml
@@ -9,7 +9,7 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
 	minWidth="-Infinity" prefHeight="130.0" prefWidth="531.0"
 	xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="swt.swl.topcard.controller.CreateUserStoryController">
+	fx:controller="swt.swl.topcard.controller.impl.CreateUserStoryControllerImpl">
 	<children>
 		<Label layoutX="14.0" layoutY="14.0" text="Create new UserStory">
 			<font>
