--- a/TopCard/src/swt/swl/topcard/view/ShowDiagramView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/ShowDiagramView.fxml
@@ -31,9 +31,9 @@
                         <Label prefHeight="16.0" prefWidth="53.0" text="WHERE " />
                      </children>
                   </HBox>
-                  <HBox layoutX="371.0" layoutY="314.0" prefHeight="26.0" prefWidth="207.0" spacing="5.0">
+                  <HBox layoutX="371.0" layoutY="314.0" prefHeight="26.0" prefWidth="227.0" spacing="5.0">
                      <children>
-                        <ComboBox fx:id="optionComboBox" prefHeight="26.0" prefWidth="42.0" />
+                        <ChoiceBox fx:id="optionChoiceBox" prefHeight="26.0" prefWidth="68.0" />
                         <TextField fx:id="equalsTextField" prefHeight="26.0" prefWidth="73.0" />
                         <Button fx:id="executeButton" mnemonicParsing="false" onAction="#executeDelete" text="Execute" />
                      </children>
@@ -48,7 +48,7 @@
 					<children>
 						<HBox layoutX="258.0" layoutY="327.0" prefHeight="26.0" prefWidth="328.0" spacing="15.0">
 							<children>
-                        <TextField fx:id="optionTextField" />
+                        <ChoiceBox fx:id="voteChoiceBox" prefHeight="26.0" prefWidth="97.0" />
 								<Button fx:id="showButton2" mnemonicParsing="false" onAction="#showButton2Clicked" text="Show" />
 								<Button fx:id="closeButton2" mnemonicParsing="false" onAction="#closeButton2Clicked" text="Close" />
 							</children>
@@ -65,5 +65,10 @@
 				</AnchorPane>
 			</content>
 		</Tab>
+      <Tab fx:id="tab3" text="Global">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+        </content>
+      </Tab>
 	</tabs>
 </TabPane>
