--- a/TopCard/src/swt/swl/topcard/view/SearchRequirementCardView.fxml
+++ b/TopCard/src/swt/swl/topcard/view/SearchRequirementCardView.fxml
@@ -4,48 +4,33 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity"
-	minHeight="-Infinity" minWidth="-Infinity" prefHeight="937.0"
-	prefWidth="981.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="swt.swl.topcard.controller.impl.SearchRequirementCardControllerImpl">
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="954.0" prefWidth="997.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swt.swl.topcard.controller.impl.SearchRequirementCardControllerImpl">
 	<content>
-		<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-			minWidth="-Infinity" prefHeight="847.0" prefWidth="960.0">
+		<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="943.0" prefWidth="980.0">
 			<children>
-				<VBox layoutX="14.0" layoutY="64.0" prefHeight="673.0"
-					prefWidth="951.0" spacing="20.0">
+				<VBox layoutX="14.0" layoutY="64.0" prefHeight="673.0" prefWidth="951.0" spacing="20.0">
 					<children>
 						<HBox prefHeight="12.0" prefWidth="775.0" spacing="115.0">
 							<children>
 								<Label prefHeight="16.0" prefWidth="43.0" text="Title:" />
-								<TextField fx:id="titleTextField" layoutX="138.0"
-									layoutY="10.0" prefHeight="26.0" prefWidth="400.0"
-									style="-fx-background-radius: 15;" />
+								<TextField fx:id="titleTextField" layoutX="138.0" layoutY="10.0" prefHeight="26.0" prefWidth="400.0" style="-fx-background-radius: 15;" />
 							</children>
 						</HBox>
-						<HBox layoutX="10.0" layoutY="10.0" prefHeight="0.0"
-							prefWidth="775.0" spacing="97.0">
+						<HBox layoutX="10.0" layoutY="10.0" prefHeight="0.0" prefWidth="775.0" spacing="97.0">
 							<children>
 								<Label prefHeight="16.0" prefWidth="62.0" text="Owner:" />
-								<TextField fx:id="ownerTextField" layoutX="138.0"
-									layoutY="10.0" prefHeight="26.0" prefWidth="271.0"
-									style="-fx-background-radius: 15;" />
+								<TextField fx:id="ownerTextField" layoutX="138.0" layoutY="10.0" prefHeight="26.0" prefWidth="271.0" style="-fx-background-radius: 15;" />
 							</children>
 						</HBox>
 						<HBox prefHeight="0.0" prefWidth="775.0" spacing="77.0">
 							<children>
 								<Label prefHeight="26.0" prefWidth="83.0" text="Modulname:" />
-								<MenuButton fx:id="modulNameChoiceBox"
-									mnemonicParsing="false" prefHeight="26.0" prefWidth="144.0">
+								<MenuButton fx:id="modulNameChoiceBox" mnemonicParsing="false" prefHeight="26.0" prefWidth="144.0">
 									<items>
-										<MenuItem fx:id="modul1MenuItem" mnemonicParsing="false"
-											text="Modul 1" />
-										<MenuItem fx:id="modul2MenuItem" mnemonicParsing="false"
-											text="Modul 2" />
-										<MenuItem fx:id="modul3MenuItem" mnemonicParsing="false"
-											text="Modul .." />
-										<MenuItem fx:id="modul4MenuItem" mnemonicParsing="false"
-											text="Modul n" />
+										<MenuItem fx:id="modul1MenuItem" mnemonicParsing="false" text="Modul 1" />
+										<MenuItem fx:id="modul2MenuItem" mnemonicParsing="false" text="Modul 2" />
+										<MenuItem fx:id="modul3MenuItem" mnemonicParsing="false" text="Modul .." />
+										<MenuItem fx:id="modul4MenuItem" mnemonicParsing="false" text="Modul n" />
 									</items>
 								</MenuButton>
 							</children>
@@ -53,41 +38,29 @@
 						<HBox prefHeight="133.0" prefWidth="621.0" spacing="40.0">
 							<children>
 								<Label prefHeight="27.0" prefWidth="121.0" text="Description:" />
-								<TextArea fx:id="descriptionTextArea" layoutX="140.0"
-									layoutY="10.0" prefHeight="140.0" prefWidth="400.0" />
+								<TextArea fx:id="descriptionTextArea" layoutX="140.0" layoutY="10.0" prefHeight="140.0" prefWidth="400.0" />
 								<VBox prefHeight="220.0" prefWidth="346.0" spacing="6.0">
 									<children>
-										<HBox fx:id="descriptionPreciseHBox" prefHeight="26.0"
-											prefWidth="309.0" spacing="10.0">
+										<HBox fx:id="descriptionPreciseHBox" prefHeight="26.0" prefWidth="309.0" spacing="10.0">
 											<children>
-												<Label prefHeight="26.0" prefWidth="187.0"
-													text="Precise Vote Score:" />
-												<ComboBox fx:id="descriptionPreciseCompareComboBox"
-													prefHeight="26.0" prefWidth="55.0" />
-												<ComboBox fx:id="descriptionPreciseNumberComboBox"
-													layoutX="119.0" layoutY="10.0" prefHeight="26.0" prefWidth="58.0" />
+												<Label prefHeight="26.0" prefWidth="187.0" text="Precise Vote Score:" />
+												<ComboBox fx:id="descriptionPreciseCompareComboBox" prefHeight="26.0" prefWidth="55.0" />
+												<ComboBox fx:id="descriptionPreciseNumberComboBox" layoutX="119.0" layoutY="10.0" prefHeight="26.0" prefWidth="58.0" />
 											</children>
 										</HBox>
-										<HBox fx:id="descriptionUnderstandableHBox" prefHeight="26.0"
-											prefWidth="309.0" spacing="10.0">
+										<HBox fx:id="descriptionUnderstandableHBox" prefHeight="26.0" prefWidth="309.0" spacing="10.0">
 											<children>
-												<Label prefHeight="16.0" prefWidth="187.0"
-													text="Understandable Vote Score:" />
-												<ComboBox fx:id="descriptionUnderstandableCompareComboBox"
-													prefHeight="26.0" prefWidth="57.0" />
-												<ComboBox fx:id="descriptionUnderstandableNumberComboBox"
-													layoutX="119.0" layoutY="10.0" prefHeight="26.0" prefWidth="58.0" />
+												<Label prefHeight="16.0" prefWidth="187.0" text="Understandable Vote Score:" />
+												<ComboBox fx:id="descriptionUnderstandableCompareComboBox" prefHeight="26.0" prefWidth="57.0" />
+												<ComboBox fx:id="descriptionUnderstandableNumberComboBox" layoutX="119.0" layoutY="10.0" prefHeight="26.0" prefWidth="58.0" />
 											</children>
 										</HBox>
 										<Label text="Correct:" />
-										<ComboBox fx:id="descriptionCorrectComboBox"
-											prefWidth="150.0" />
+										<ComboBox fx:id="descriptionCorrectComboBox" prefWidth="150.0" />
 										<Label text="Complete:" />
-										<ComboBox fx:id="descriptionCompleteComboBox"
-											prefWidth="150.0" />
+										<ComboBox fx:id="descriptionCompleteComboBox" prefWidth="150.0" />
 										<Label text="Atomic:" />
-										<ComboBox fx:id="descriptionAtomicComboBox"
-											prefWidth="150.0" />
+										<ComboBox fx:id="descriptionAtomicComboBox" prefWidth="150.0" />
 									</children>
 								</VBox>
 							</children>
@@ -95,109 +68,78 @@
 						<HBox prefHeight="188.0" prefWidth="794.0" spacing="42.0">
 							<children>
 								<Label prefHeight="27.0" prefWidth="121.0" text="Rationale:" />
-								<TextArea fx:id="rationaleTextArea" prefHeight="140.0"
-									prefWidth="400.0" />
+								<TextArea fx:id="rationaleTextArea" prefHeight="140.0" prefWidth="400.0" />
 								<VBox prefHeight="188.0" prefWidth="341.0" spacing="6.0">
 									<children>
-										<HBox fx:id="descriptionPreciseHBox" prefHeight="26.0"
-											prefWidth="309.0" spacing="10.0">
+										<HBox fx:id="descriptionPreciseHBox" prefHeight="26.0" prefWidth="309.0" spacing="10.0">
 											<children>
-												<Label prefHeight="26.0" prefWidth="187.0"
-													text="Precise Vote Score:" />
-												<ComboBox fx:id="rationalePreciseCompareComboBox"
-													prefHeight="26.0" prefWidth="52.0" />
-												<ComboBox fx:id="rationalePreciseNumberComboBox"
-													layoutX="119.0" layoutY="10.0" prefHeight="26.0" prefWidth="64.0" />
+												<Label prefHeight="26.0" prefWidth="187.0" text="Precise Vote Score:" />
+												<ComboBox fx:id="rationalePreciseCompareComboBox" prefHeight="26.0" prefWidth="52.0" />
+												<ComboBox fx:id="rationalePreciseNumberComboBox" layoutX="119.0" layoutY="10.0" prefHeight="26.0" prefWidth="64.0" />
 											</children>
 										</HBox>
-										<HBox fx:id="rationaleUnderstandableHBox" prefHeight="26.0"
-											prefWidth="309.0" spacing="10.0">
+										<HBox fx:id="rationaleUnderstandableHBox" prefHeight="26.0" prefWidth="309.0" spacing="10.0">
 											<children>
-												<Label prefHeight="27.0" prefWidth="188.0"
-													text="Understandable Vote Score:" />
-												<ComboBox fx:id="rationaleUnderstandableCompareComboBox"
-													prefHeight="26.0" prefWidth="53.0" />
-												<ComboBox fx:id="rationaleUnderstandableNumberComboBox"
-													layoutX="119.0" layoutY="10.0" prefHeight="26.0" prefWidth="61.0" />
+												<Label prefHeight="27.0" prefWidth="188.0" text="Understandable Vote Score:" />
+												<ComboBox fx:id="rationaleUnderstandableCompareComboBox" prefHeight="26.0" prefWidth="53.0" />
+												<ComboBox fx:id="rationaleUnderstandableNumberComboBox" layoutX="119.0" layoutY="10.0" prefHeight="26.0" prefWidth="61.0" />
 											</children>
 										</HBox>
 										<Label text="Traceable:" />
-										<ComboBox fx:id="rationaleTraceableComboBox"
-											prefWidth="150.0" />
+										<ComboBox fx:id="rationaleTraceableComboBox" prefWidth="150.0" />
 										<Label text="Correct:" />
 										<ComboBox fx:id="rationaleCorrectComboBox" prefWidth="150.0" />
 										<Label text="Consistent:" />
-										<ComboBox fx:id="rationaleConsistentComboBox"
-											prefWidth="150.0" />
+										<ComboBox fx:id="rationaleConsistentComboBox" prefWidth="150.0" />
 									</children>
 								</VBox>
 							</children>
 						</HBox>
-						<HBox layoutX="10.0" layoutY="319.0" prefHeight="3.0"
-							prefWidth="775.0" spacing="85.0">
+						<HBox layoutX="10.0" layoutY="319.0" prefHeight="3.0" prefWidth="775.0" spacing="85.0">
 							<children>
 								<Label prefHeight="27.0" prefWidth="77.0" text="Source: " />
-								<TextField fx:id="sourceTextField" prefWidth="400.0"
-									style="-fx-background-radius: 15;" />
+								<TextField fx:id="sourceTextField" prefWidth="400.0" style="-fx-background-radius: 15;" />
 							</children>
 						</HBox>
-						<HBox layoutX="10.0" layoutY="475.0" prefHeight="4.0"
-							prefWidth="775.0" spacing="60.0">
+						<HBox layoutX="10.0" layoutY="475.0" prefHeight="4.0" prefWidth="775.0" spacing="60.0">
 							<children>
 								<Label prefHeight="27.0" prefWidth="101.0" text="Userstories:" />
-								<TextField fx:id="userStoriesTextField" prefHeight="51.0"
-									prefWidth="400.0" style="-fx-background-radius: 15;" />
+								<TextField fx:id="userStoriesTextField" prefHeight="51.0" prefWidth="400.0" style="-fx-background-radius: 15;" />
 							</children>
 						</HBox>
-						<HBox layoutX="10.0" layoutY="541.0" prefHeight="0.0"
-							prefWidth="775.0" spacing="18.0">
+						<HBox layoutX="10.0" layoutY="541.0" prefHeight="0.0" prefWidth="775.0" spacing="18.0">
 							<children>
 								<Label prefHeight="26.0" prefWidth="142.0" text="Supporting Materials:" />
-								<TextField fx:id="supportingMaterialsTextField"
-									prefHeight="26.0" prefWidth="400.0" style="-fx-background-radius: 15;" />
+								<TextField fx:id="supportingMaterialsTextField" prefHeight="26.0" prefWidth="400.0" style="-fx-background-radius: 15;" />
 							</children>
 						</HBox>
-						<HBox layoutX="10.0" layoutY="600.0" prefHeight="0.0"
-							prefWidth="775.0" spacing="60.0">
+						<HBox layoutX="10.0" layoutY="600.0" prefHeight="0.0" prefWidth="775.0" spacing="60.0">
 							<children>
 								<Label prefHeight="27.0" prefWidth="101.0" text="Fit criterion:" />
-								<TextField fx:id="fitCriterionTextField" prefHeight="39.0"
-									prefWidth="400.0" style="-fx-background-radius: 15;" />
+								<TextField fx:id="fitCriterionTextField" prefHeight="39.0" prefWidth="400.0" style="-fx-background-radius: 15;" />
 							</children>
 						</HBox>
-						<HBox layoutX="10.0" layoutY="662.0" prefHeight="0.0"
-							prefWidth="775.0" spacing="140.0">
+						<HBox layoutX="10.0" layoutY="662.0" prefHeight="0.0" prefWidth="775.0" spacing="140.0">
 							<children>
 								<Label prefHeight="27.0" prefWidth="72.0" text="Frozen? " />
-								<CheckBox fx:id="frozenChoiceBox" mnemonicParsing="false"
-									prefHeight="27.0" prefWidth="12.0" style="-fx-background-radius: 50;" />
+								<CheckBox fx:id="frozenChoiceBox" mnemonicParsing="false" prefHeight="27.0" prefWidth="12.0" style="-fx-background-radius: 50;" />
 							</children>
 						</HBox>
-						<HBox alignment="BOTTOM_RIGHT" prefHeight="65.0" prefWidth="775.0"
-							spacing="18.0">
+						<HBox alignment="BOTTOM_RIGHT" prefHeight="65.0" prefWidth="775.0" spacing="18.0">
 							<children>
-								<Button fx:id="closeButton" mnemonicParsing="false"
-									onAction="#closeWindow" prefHeight="75.0" prefWidth="170.0"
-									style="-fx-background-radius: 15;" text="Close without saving" />
-								<Button fx:id="searchButton" mnemonicParsing="false"
-									onAction="#searchButtonClicked" prefHeight="75.0" prefWidth="170.0"
-									style="-fx-background-radius: 15;" text="Search" />
+								<Button fx:id="closeButton" mnemonicParsing="false" onAction="#closeWindow" prefHeight="75.0" prefWidth="170.0" style="-fx-background-radius: 15;" text="Close without saving" />
+								<Button fx:id="searchButton" mnemonicParsing="false" onAction="#searchButtonClicked" prefHeight="75.0" prefWidth="170.0" style="-fx-background-radius: 15;" text="Search" />
 							</children>
 						</HBox>
 					</children>
 				</VBox>
-				<Label layoutX="4.0" layoutY="28.0" prefHeight="27.0"
-					prefWidth="943.0"
-					text="_____________________________________________________________________________________________________________________________" />
-				<Label layoutX="14.0" layoutY="14.0" prefHeight="27.0"
-					prefWidth="257.0" text="Search Requirement Card: " underline="true" />
-				<HBox fx:id="rationalePreciseHBox" layoutX="613.0" layoutY="345.0"
-					prefHeight="26.0" prefWidth="309.0" spacing="10.0" visible="false">
+				<Label layoutX="4.0" layoutY="28.0" prefHeight="27.0" prefWidth="943.0" text="_____________________________________________________________________________________________________________________________" />
+				<Label layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="257.0" text="Search Requirement Card: " underline="true" />
+				<HBox fx:id="rationalePreciseHBox" layoutX="613.0" layoutY="345.0" prefHeight="26.0" prefWidth="309.0" spacing="10.0" visible="false">
 					<children>
 						<Label prefHeight="26.0" prefWidth="187.0" text="Precise Vote Score:" />
 						<ComboBox fx:id="descriptionPreciseCompareComboBox" />
-						<ComboBox fx:id="descriptionPreciseNumberComboBox"
-							layoutX="119.0" layoutY="10.0" />
+						<ComboBox fx:id="descriptionPreciseNumberComboBox" layoutX="119.0" layoutY="10.0" />
 					</children>
 				</HBox>
 			</children>
